--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,8 +21,8 @@ jobs:
         run: |
             mkdir _build
             cd latest/
-            quarto render Computo.qmd
-            mv Computo.html ../_build/index.html
+            quarto render presentation.qmd
+            mv presentation.html ../_build/index.html
 
       - name: Deploying article on github pages
         uses: JamesIves/github-pages-deploy-action@3.7.1
